--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,4 +23,13 @@
         </intent-filter>
       </activity>
     </application>
+    /* Required */‍
+‍<uses-permission android:name="android.permission.CAMERA"></uses-permission>
+/* Include this only if you are planning to use the microphone for video recording */
+‍
+‍<uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
+/* Include this only if you are planning to use the camera roll */
+‍
+‍<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 </manifest>
