--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@react-navigation/stack": "^6.2.1",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
+    "firebase": "^9.8.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
-    "react-native-svg": "^12.3.0"
+    "react-native-svg": "^12.3.0",
+    "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.5",
